--- a/app/src/main/res/layout/fragment_call_accepted.xml
+++ b/app/src/main/res/layout/fragment_call_accepted.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CallAcceptedFragment"/>
+    android:layout_marginTop="350dp"
+    tools:context=".CallAcceptedFragment">
+
+
+    <ImageButton
+        android:id="@+id/fake1"
+        android:layout_width="107dp"
+        android:layout_height="93dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="305dp"
+        android:layout_marginBottom="357dp"
+        android:background="#000000"
+        android:src="@android:drawable/ic_btn_speak_now" />
+
+    <ImageButton
+        android:id="@+id/endCall"
+        android:layout_width="100dp"
+        android:layout_height="74dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="94dp"
+        android:layout_marginBottom="73dp"
+        android:src="@android:drawable/ic_delete" />
+
+</RelativeLayout>
