--- a/app/src/main/res/layout/fragment_call_accepted.xml
+++ b/app/src/main/res/layout/fragment_call_accepted.xml
@@ -10,16 +10,16 @@
 
     <ImageButton
         android:id="@+id/fake1"
-        android:layout_width="107dp"
-        android:layout_height="93dp"
+        android:layout_width="89dp"
+        android:layout_height="80dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="305dp"
-        android:layout_marginBottom="357dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="268dp"
+        android:layout_marginBottom="272dp"
         android:background="#000000"
         android:src="@android:drawable/ic_btn_speak_now" />
 
@@ -29,8 +29,42 @@
         android:layout_height="74dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="94dp"
-        android:layout_marginBottom="73dp"
+        android:layout_marginEnd="153dp"
+        android:layout_marginBottom="82dp"
+        android:onClick="endCall"
         android:src="@android:drawable/ic_delete" />
+
+    <ImageButton
+        android:id="@+id/fake2"
+        android:layout_width="91dp"
+        android:layout_height="84dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="153dp"
+        android:layout_marginBottom="262dp"
+        android:background="#000000"
+        android:src="@android:drawable/ic_lock_silent_mode" />
+
+    <ImageButton
+        android:id="@+id/fake3"
+        android:layout_width="69dp"
+        android:layout_height="67dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="58dp"
+        android:layout_marginBottom="270dp"
+        android:background="#000000"
+        android:src="@android:drawable/ic_menu_add" />
+
+    <ImageButton
+        android:id="@+id/fake4"
+        android:layout_width="82dp"
+        android:layout_height="74dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="161dp"
+        android:layout_marginBottom="169dp"
+        android:background="#000000"
+        android:src="@android:drawable/ic_dialog_dialer" />
 
 </RelativeLayout>
