--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,6 @@
     android:background="#000000"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Expect 15 sec countdown"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
-
-
     <Button
         android:id="@+id/callBtn"
         android:layout_width="165dp"
@@ -32,5 +20,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.226" />
+
+    <RadioGroup
+        android:id="@+id/rdGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:scaleX="1.3"
+        android:scaleY="1.3"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.58">
+
+        <RadioButton
+            android:id="@+id/rdb15sec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="110dp"
+            android:buttonTint="@color/red"
+            android:checked="true"
+            android:onClick="onRadioButtonClicked"
+            android:padding="10dp"
+            android:text="15 Seconds"
+            android:textColor="#FFFFFF" />
+
+        <RadioButton
+            android:id="@+id/rdb30sec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="110dp"
+            android:buttonTint="@color/red"
+            android:onClick="onRadioButtonClicked"
+            android:padding="10dp"
+            android:text="30 Seconds"
+            android:textColor="#FFFFFF" />
+
+        <RadioButton
+            android:id="@+id/rdb1min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="110dp"
+            android:buttonTint="@color/red"
+            android:onClick="onRadioButtonClicked"
+            android:padding="10dp"
+            android:text="1 Minute"
+            android:textColor="#FFFFFF" />
+    </RadioGroup>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
